--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,9 +34,9 @@
     ],
     "mounts": [
         "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind",
-        "source=/mnt/Data/AbDb/abdb_newdata_20220926,target=/AbDb,type=bind",
+        // "source=/mnt/Data/AbDb/abdb_newdata_20220926,target=/AbDb,type=bind",
        // Add any extra bind mounts here
-       "source=/mnt/Data/wwPDB,target=/wwPDB,type=bind",
+    //    "source=/mnt/Data/wwPDB,target=/wwPDB,type=bind",
     ],
     "remoteUser": "vscode",
     "overrideCommand": false,
